<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5EBD8"
    tools:context=".Screen2">


    <android.support.v7.widget.CardView
        android:layout_width="348dp"
        android:layout_height="566dp"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#70D7BF"
        app:cardElevation="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="49dp"
            android:layout_height="43dp"
            android:layout_marginLeft="155dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo3"
            app:srcCompat="@drawable/mmda" />

        <TextView
            android:id="@+id/info"
            android:layout_width="204dp"
            android:layout_height="37dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="60dp"
            android:text="@string/ride_with_us"
            android:textAllCaps="false"
            android:textColor="#2a2626"
            android:textColorHighlight="?android:attr/colorForeground"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/anton"
            tools:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/fare"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/get_to_know_how_much_you_need_for_a_ride_with_us"
            android:textColor="#2a2626"
            android:textSize="18sp"
            tools:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="175dp"
            android:text="@string/choose_your_location"
            android:textColor="#2a2626"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="@font/anton" />

        <Spinner
            android:id="@+id/spinner_location"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:layout_width="314dp"
            android:layout_height="31dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="205dp"
            tools:style="@android:style/Widget.DeviceDefault.Light.Spinner"></Spinner>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="250dp"
            android:text="@string/choose_your_drop_off"
            android:textColor="#2a2626"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/anton" />

        <Spinner
            android:id="@+id/spinner_dropoff"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:layout_width="313dp"
            android:layout_height="31dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            tools:style="@android:style/Widget.DeviceDefault.Light.Spinner" />

        <Button
            android:id="@+id/submit"
            android:layout_width="91dp"
            android:layout_height="35dp"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="515dp"
            android:background="#4C6663"
            android:onClick="process"
            android:text="@string/submit"
            android:textColor="?android:attr/colorBackgroundFloating"
            android:textStyle="bold" tools:targetApi="m"/>

        <CheckBox
            android:id="@+id/discount"
            android:layout_width="303dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="330dp"
            android:text="@string/are_you_a_senior_student_pwd" />
    </android.support.v7.widget.CardView>
</RelativeLayout>